--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "react-scripts": "3.4.0",
     "redux": "4.0.5",
     "redux-immutable": "4.0.0",
-    "redux-saga": "1.1.3",
-    "uuid": "^7.0.2"
+    "redux-saga": "1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
