--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
     "react-scripts": "3.4.0",
     "redux": "4.0.5",
     "redux-immutable": "4.0.0",
-    "redux-saga": "1.1.3"
+    "redux-saga": "1.1.3",
+    "eslint": "7.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "eject": "react-scripts eject",
+    "lint": "eslint --ext .js src",
+    "lint:fix": "eslint --ext .js src --fix"
   },
   "browserslist": {
     "production": [
